<resources>
    <string name="app_name">ShopNail</string>
    <string name="login_for_staff">Login for Staff</string>
    <string name="make_appointment_online">Make appointment online</string>
    <string name="exit">Exit</string>
    <string name="username">User Name</string>
    <string name="enter_username">Enter User Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="login_sucessfull">Login Sucessfull</string>
    <string name="enter_username_pwd">Please enter Username and Password</string>
    <string name="login_failed">Username or password is not correct.</string>
    <string name="login_outside_failed">Username is not correct.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_or_email">Phone or email</string>
    <string name="phone">Phone</string>
    <string name="menu_for_staff">Menu</string>
    <string name="select_service">Services</string>
    <string name="my_customer">Customer</string>
    <string name="customer_service_history">History</string>
    <string name="staff_info">Profile</string>
    <string name="logout">Logout</string>
    <string name="go_back">Go Back</string>
    <string name="title_my_customer">My Customer</string>
    <string name="title_main">Nails &amp; Spa</string>
    <string name="staff_id">ID</string>
    <string name="staff_name">Name</string>
    <string name="staff_phonenumber">Phone</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="new_customer">New Customer</string>
    <string name="old_customer">Old Customer</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pas">Confirm New Password</string>
    <string name="old_pass_empty">Old PassWord is empty. Please input Old PassWord</string>
    <string name="new_pass_empty">New PassWord is empty. Please input New PassWord</string>
    <string name="confirm_new_pass_empty">Confirm New PassWord is empty. Please input confirm New PassWord</string>
    <string name="new_pass_notmatch">New Password are not match</string>
    <string name="change_pass_succeccful">Change Password Successful</string>
    <string name="change_pass_fail">Change Password Failed</string>
    <string name="name_customer">Name</string>
    <string name="customer_phonenumber">Phone Number Customer</string>
    <string name="empty">Empty</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="select_date_to_view_history">Select Date to view History</string>
    <string name="filter_by_day">Select Date: </string>
    <string name="view_cart">View cart</string>
    <string name="extra">Extra</string>
    <string name="add">Add</string>
    <string name="total">Total</string>
    <string name="confirm">Confirm</string>
    <string name="customer_info">Order Information</string>

    <string name="forget_password">Forget Password ?</string>
    <string name="reset_password">Reset Password</string>

    <string name="book_appointment">Book appointment online</string>
    <string name="customer_name">Name </string>
    <string name="customer_phone">Phone </string>
    <string name="select_staff">Staff </string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="customer_phone_hint">Phone Number</string>
    <string name="old_pass_wrong">Old PassWord was wrong</string>

    <string name="update_status">Update status</string>
    <string name="service">Service</string>
    <string name="wax">Wax</string>
    <string name="bonus">Bonus</string>
    <string name="manage_staff">Staff</string>
    <string name="add_more_services"><u>Add More Services...</u></string>
    <string name="note">Note</string>
    <string name="time">Time</string>
    <string name="update_service">Update Service</string>
    <string name="cancel_service">Cancel Service</string>
    <string name="enter_your_phone">Enter your phone</string>


    <string name="email_customer">Customer Email</string>

    <string name="email">Email</string>
    <string name="error_title">Error</string>
    <string name="error_get_staff">Cannot get Staff Information.\nPlease try again</string>
    <string name="error_get_service">Cannot get Service Information.\nPlease try again</string>
    <string name="error_book_appointment">Cannot book your services.\nPlease try again</string>
    <string name="error_select_date">Do not select date in the past.\nPlease select a date from current to future.</string>
    <string name="error_check_time_booking">Cannot book your services in this time.\nPlease select another time.\nAnd try again</string>
    <string name="change_avatar_success">Change Avatar Successful</string>
    <string name="change_avatar_failed">Change Avatar Failed</string>
    <string name="get_config_time">Get Config Time Failed</string>
    <string name="confirm_submit_booking_online">Do you want to submit?\nPlease make sure the information is corrected!</string>
    <string name="error_email_not_valid">The email address is not valid.\nPlease check it and try again</string>
    <string name="error_input_time">The time is invalid.\nOpen Time is: %1$s and Close Time is: %2$s\nPlease check it and try again!</string>
    <string name="input_time_duplicate">The hours is duplicate. Please input another hours</string>

    <string name="phone_input_fail">The phone number is not corrected.\nPlease check again!</string>
    <string name="login_customer_fail">Cannot login for current customer</string>
    <string name="close_lb">Close</string>
    <string name="order_id">Order</string>
    <string name="confirm_service_empty">The list of service is empty</string>

    <string name="cancel_appointment">Cancel appointment online</string>
    <string name="order_management_online">Order Management Online</string>
    <string name="confirm_delete_appointment">Are you sure you want to cancel this service?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="management_point">Management Point</string>

</resources>
