<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">


    <EditText
        android:id="@+id/txtNameCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_customer"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/txtEmailCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/txtPhoneCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="12"
        android:hint="@string/phone">
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_nail"
            android:textSize="12dp"
            android:text="@string/cancel"></Button>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_nail"
            android:textSize="12dp"
            android:text="@string/ok"></Button>
    </LinearLayout>
</LinearLayout>