<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_pass"
            android:layout_weight="1"
            android:inputType="textPassword">
            <requestFocus></requestFocus>
        </EditText>

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:layout_weight="1"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:id="@+id/txtConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_pas"
            android:layout_weight="1"
            android:inputType="textPassword">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_nail"
            android:text="@string/cancel"
            android:textSize="12dp"></Button>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_nail"
            android:text="@string/ok"
            android:textSize="12dp"></Button>
    </LinearLayout>
</LinearLayout>