<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/menu_for_staff"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_select_service"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_nail"
                android:text="@string/select_service"
                android:textColor="@drawable/button_text" />

            <Button
                android:id="@+id/btn_my_customer"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_nail"
                android:text="@string/my_customer"
                android:textColor="@drawable/button_text" />

            <Button
                android:id="@+id/btn_customer_service_history"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_nail"
                android:text="@string/customer_service_history"
                android:textColor="@drawable/button_text" />

            <Button
                android:id="@+id/btn_staff_info"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_nail"
                android:text="@string/staff_info"
                android:textColor="@drawable/button_text" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_nail"
                android:text="@string/logout"
                android:textColor="@drawable/button_text" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>