<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_custom"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_name_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_customer"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/txt_phone_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/txt_date_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date: 18-09-2018"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>


        <ListView
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:focusableInTouchMode="true"/>

            <Button
                android:id="@+id/btc_add_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_nail"
                android:textColor="@drawable/button_text"
                android:text="@string/add" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_view_cart"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_nail"
                android:text="@string/confirm"
                android:textColor="@drawable/button_text" />
            <Button
                android:id="@+id/btn_go_back"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_nail"
                android:text="@string/back"
                android:textColor="@drawable/button_text" />

    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>